--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
         "pinia": "^2.1.7",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
+        "tailwindcss-animated": "^2.0.0",
         "vite": "^5.0",
         "vue": "^3.4.0"
     },
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
+        "@selemondev/vue3-signature-pad": "^1.2.2",
         "@types/jspdf": "^2.0.0",
         "@vuepic/vue-datepicker": "^8.5.0",
         "alpinejs": "^3.13.10",
