--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.9",
         "laraveles/spanish": "^1.5",
         "spatie/laravel-permission": "^6.9",
+        "spatie/simple-excel": "^3.7",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
