--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "qrcode": "^1.5.3",
         "sweetalert2": "^11.12.1",
         "v-markdown-editor": "^1.2.6",
+        "v-mask": "^2.3.0",
         "vue-loading-overlay": "^6.0.4",
         "vue-select": "^4.0.0-beta.6",
         "vue2-editor": "^2.10.3"
