--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
         "@vitejs/plugin-vue": "^4.0.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.4",
-        "chart.js": "^4.4.3",
         "laravel-vite-plugin": "^1.0",
         "lodash": "^4.17.21",
         "numeral": "^2.0.6",
@@ -28,27 +27,21 @@
     },
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
-        "@inertiajs/inertia-vue3": "^0.6.0",
+        "@primeuix/themes": "^1.0.3",
         "@selemondev/vue3-signature-pad": "^1.2.2",
-        "@types/jspdf": "^2.0.0",
-        "@vuepic/vue-datepicker": "^8.5.0",
         "alpinejs": "^3.13.10",
         "bootstrap": "^5.3.0",
         "date-fns": "^3.6.0",
         "date-fns-tz": "^3.1.3",
         "flowbite": "^1.8.1",
         "flowbite-vue": "^0.0.17",
-        "google-maps-api-loader": "^1.1.1",
+        "inputmask": "^5.0.9",
         "jspdf": "^2.5.1",
-        "jspdf-autotable": "^3.8.2",
         "laravel-vue-pagination": "^4.1.3",
         "moment": "^2.30.1",
-        "qrcode": "^1.5.3",
+        "primevue": "^4.3.3",
         "sweetalert2": "^11.12.1",
-        "v-markdown-editor": "^1.2.6",
-        "v-mask": "^2.3.0",
-        "vue-loading-overlay": "^6.0.4",
-        "vue-select": "^4.0.0-beta.6",
-        "vue2-editor": "^2.10.3"
+        "vue-inputmask": "^0.2.1",
+        "vue-loading-overlay": "^6.0.4"
     }
 }
