--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@selemondev/vue3-signature-pad": "^1.2.2",
         "alpinejs": "^3.13.10",
         "bootstrap": "^5.3.0",
+        "chart.js": "^4.4.8",
         "date-fns": "^3.6.0",
         "date-fns-tz": "^3.1.3",
         "flowbite": "^1.8.1",
