--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "laraveles/spanish": "^1.5",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-permission": "^6.9",
         "spatie/simple-excel": "^3.7",
         "tightenco/ziggy": "^1.0"
